--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Memory</title>
     <script type="text/javascript" src="../elm.js"></script>
     <link rel="stylesheet" href="css/normalize.css" media="all">
+    <link rel="stylesheet" href="css/skeleton.css" media="all">
     <link rel="stylesheet" href="css/style.css" media="all">
     <link rel="stylesheet" href="css/cards.css" media="all">
   </head>
